app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "flowbite";

@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

@keyframes erasing {
  from {
    width: 100%;
  }
  to {
    width: 0;
  }
}

@keyframes slideDown {
  from {
    transform: translateY(-100%);
  }
  to {
    transform: translateY(0);
  }
}

@keyframes bounce-slow {
  0%, 100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px); /* Ajusta la altura del salto aquí */
  }
}

.animate-bounce-slow {
  animation: bounce-slow 1s ease-in-out infinite;
  animation-delay: 4s; /* Puedes ajustar el retraso para que salte cada cierto tiempo */
}

html {
  scroll-behavior: smooth;
}

.menuSlideDown {
  animation: slideDown 1s ease forwards;
}

.buttonTransition {
  transition: background-color 0.5s ease, color 0.5s ease;
}

/* Fixed term */
.image-container {
  position: absolute;
  display: flex;
  left: 12px;
  justify-content: center;
  width: 100%;
  height: 100%;
  align-items: center;
  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
  opacity: 1;
  transform: translateY(0);
}

@media (min-width: 1280px) and (max-width: 1535px) {
  .image-container {
    width: 90%;
  }
}

.image-container.hidden {
  opacity: 0;
  transform: translateY(20px);
}

.image-step {
  position: relative;
  overflow: hidden;
  transition: opacity 0.9s ease-in-out;
}
.slide-image {
  opacity: 0;
  transition: opacity 0.9s ease-in-out;
  position: absolute;
  top: 0;
  left: 0;
  /* width: 100%; */
  height: 100%;
}

.slide-image.active {
  opacity: 1;
  position: relative;
}

/* Testimonials-Effect and Howitswork */
@keyframes fadeInRight {
  from {
    opacity: 0;
    transform: translateX(20px); /* move right*/
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.fade-in-right {
  opacity: 0;
  animation: fadeInRight 2s ease forwards;
}

/* Animation for cursor blinking */
@keyframes blink-cursor {
  50% {
    border-color: transparent;
  }
}

.typing-effect {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  margin-left: 10px;
  border-right: 1px solid;
  width: 0;
}

.word-finniu {
  color: #97e3ff;
}

.word-crecimiento {
  color: #9381ff;
}
@keyframes blink-caret {
  from,
  to {
    border-color: #fff;
  }
  50% {
    border-color: white;
  }
}

body {
  font-family: "dmSans";
  overflow-x: hidden;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

/* nav ul li {
  display: inline;
  padding: 24px 50px;
} */

a {
  text-decoration: none;
}

/* a:hover {
  text-decoration: underline;
} */

/* a:hover,
a:focus,
a:active {
  text-decoration: none;
} */
button[data-testid="carousel-right-control"] {
  background-color: #1a3a5a;
  color: white;
  margin-right: -232px;
}

button[data-testid="carousel-left-control"] {
  background-color: #1a3a5a;
  color: #1a3a5a;
  margin-left: -232px;
}

button[data-testid="carousel-indicator"] {
  background-color: #1a3a5a;
  color: white;
}

.inline-flex {
  background-color: #1a3a5a;
  width: 40px;
  height: 40px;
}

@media (min-width: 1536px) {
  .inline-flex {
    width: 80px;
    height: 80px;
  }
}

.group {
  border-radius: 80px;
}

input[type="range"]:focus {
  outline: none;
  box-shadow: none;
  border: none;
}

input[type="range"] {
  -webkit-appearance: none;
  width: 100%;
  height: 8px;
  outline: none;
}

input[type="range"]::-moz-range-thumb {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background: url(../images/Section-5/BillHand.png);
  background-size: contain;
  cursor: pointer;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none; /* delite thumb */

  height: 35px;
  width: 35px;
  border-radius: 50%;
  background: url(../images/Section-5/BillHand.png);
  background-size: contain;
  cursor: pointer;
  margin-top: -9px;
}

input[type="range"]::-webkit-slider-runnable-track {
  width: 100%;
  height: 10px;
  cursor: pointer;
  background: #1a3a5a; /* color track */
  border-radius: 5px;
  /* Border track*/
}

.section-custom {
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container-section {
  padding: 30px;
  min-height: 100%;
  justify-content: space-between;
}

.bg-graySelectedColor {
  background-color: #c3a4a4;
}

.bg-blueColorButton {
  background-color: #1a3a5a;
}

.blur-effect {
  filter: blur(5px);
  transition: filter 0.3s ease;
}

.flag-dropdown {
  height: 38px;
  margin-top: 6px;
  border-color: white !important;
}
.react-tel-input .selected-flag {
  border-color: white;
  background-color: white;
  border: 0px solid white;
}

.react-tel-input .country-list {
  width: 220px !important;
}

.button-disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

@keyframes marquee {
  0% { transform: translateX(0); }
  100% { transform: translateX(-145%); }
}

.marquee {
  display: flex;
  animation: marquee 20s linear infinite;
  white-space: nowrap;
}

.gradiente {
  background: radial-gradient(circle, #81F3DB 0%, #0D3295 50%, #000000 100%);
}

